--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "fs-extra": "^10.0.0",
     "http-errors": "^1.8.0",
     "multer": "^1.4.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "uniqid": "^5.3.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
