adds export of media as pdf

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Nando-C/M5-Benchmark#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "cloudinary": "^1.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -30,6 +31,8 @@
     "http-errors": "^1.8.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "pdfmake": "^0.1.71",
+    "striptags": "^3.2.0",
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
